--- a/index.html
+++ b/index.html
@@ -1,328 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>IO Game Prototype</title>
-    <style>
-        body { margin: 0; background: black; overflow: hidden; }
-        canvas { display: block; }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<canvas id="gameCanvas"></canvas>
-<script>
-// Canvas setup
-const canvas = document.getElementById('gameCanvas');
-const ctx = canvas.getContext('2d');
-
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-
-window.addEventListener('resize', () => {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-});
-
-// Player
-const player = {
-    x: canvas.width / 2,
-    y: canvas.height / 2,
-    radius: 10,
-    speed: 3,
-    dx: 0,
-    dy: 0
-};
-
-// Controls
-const keys = {};
-window.addEventListener('keydown', (e) => {
-    keys[e.key.toLowerCase()] = true;
-    if (e.key === ' ' || e.code === 'Space') {
-        createPing(player.x, player.y);
-    }
-});
-window.addEventListener('keyup', (e) => {
-    keys[e.key.toLowerCase()] = false;
-});
-
-// Pings
-const pings = [];
-function createPing(x, y) {
-    pings.push({ x, y, radius: 0, maxRadius: 300, alpha: 1 });
-}
-
-// Crystals
-const crystals = [];
-function createCrystals(num) {
-    for (let i = 0; i < num; i++) {
-        crystals.push({
-            x: Math.random() * canvas.width,
-            y: Math.random() * canvas.height,
-            radius: 5,
-            visible: false
-        });
-    }
-}
-createCrystals(50);
-
-// AI blobs
-const aiBlobs = [];
-function createAIBlobs(num) {
-    for (let i = 0; i < num; i++) {
-        aiBlobs.push({
-            x: Math.random() * canvas.width,
-            y: Math.random() * canvas.height,
-            radius: 10,
-            speed: 1.5,
-            target: null
-        });
-    }
-}
-createAIBlobs(5);
-
-// Particles
-const particles = [];
-function createParticles(x, y, color) {
-    for (let i = 0; i < 12; i++) {
-        particles.push({
-            x, y,
-            radius: Math.random() * 2 + 1,
-            dx: (Math.random() - 0.5) * 4,
-            dy: (Math.random() - 0.5) * 4,
-            life: 30,
-            color
-        });
-    }
-}
-
-// Score
-let score = 0;
-
-// Crystal respawn
-let crystalSpawnTimer = 0;
-let crystalSpawnInterval = 120;
-
-// Update
-function update() {
-    player.dx = 0;
-    player.dy = 0;
-    if (keys['w'] || keys['arrowup'])    player.dy = -player.speed;
-    if (keys['s'] || keys['arrowdown'])  player.dy = player.speed;
-    if (keys['a'] || keys['arrowleft'])  player.dx = -player.speed;
-    if (keys['d'] || keys['arrowright']) player.dx = player.speed;
-
-    player.x += player.dx;
-    player.y += player.dy;
-
-    updatePings();
-    updateAIBlobs();
-    updateParticles();
-    checkPingCrystalReveal();
-    checkPlayerCollectCrystal();
-
-    crystalSpawnTimer++;
-    if (crystalSpawnTimer >= crystalSpawnInterval) {
-        createCrystals(1);
-        crystalSpawnTimer = 0;
-    }
-
-    player.radius -= 0.01;
-    if (player.radius < 10) player.radius = 10;
-}
-
-function updatePings() {
-    for (let i = pings.length - 1; i >= 0; i--) {
-        const ping = pings[i];
-        ping.radius += 4;
-        ping.alpha = 1 - (ping.radius / ping.maxRadius);
-
-        aiBlobs.forEach(blob => {
-            const dx = blob.x - ping.x;
-            const dy = blob.y - ping.y;
-            const dist = Math.sqrt(dx * dx + dy * dy);
-            if (dist < ping.radius + blob.radius && dist > 0) {
-                const pushStrength = (1 - dist / ping.maxRadius) * 3;
-                blob.x += (dx / dist) * pushStrength;
-                blob.y += (dy / dist) * pushStrength;
-            }
-        });
-
-        if (ping.radius >= ping.maxRadius) {
-            pings.splice(i, 1);
-        }
-    }
-}
-
-function updateAIBlobs() {
-    aiBlobs.forEach(blob => {
-        if (!blob.target || !crystals.includes(blob.target)) {
-            blob.target = crystals[Math.floor(Math.random() * crystals.length)];
-        }
-        if (blob.target) {
-            const dx = blob.target.x - blob.x;
-            const dy = blob.target.y - blob.y;
-            const dist = Math.sqrt(dx * dx + dy * dy);
-            if (dist > 1) {
-                blob.x += (dx / dist) * blob.speed;
-                blob.y += (dy / dist) * blob.speed;
-            }
-        }
-    });
-
-    checkAICollectCrystal();
-}
-
-function updateParticles() {
-    for (let i = particles.length - 1; i >= 0; i--) {
-        const p = particles[i];
-        p.x += p.dx;
-        p.y += p.dy;
-        p.life--;
-        if (p.life <= 0) {
-            particles.splice(i, 1);
-        }
-    }
-}
-
-function checkPingCrystalReveal() {
-    crystals.forEach(crystal => {
-        pings.forEach(ping => {
-            const dx = crystal.x - ping.x;
-            const dy = crystal.y - ping.y;
-            const distance = Math.sqrt(dx * dx + dy * dy);
-            if (distance < ping.radius) {
-                crystal.visible = true;
-            }
-        });
-    });
-}
-
-function checkPlayerCollectCrystal() {
-    for (let i = crystals.length - 1; i >= 0; i--) {
-        const crystal = crystals[i];
-        const dx = crystal.x - player.x;
-        const dy = crystal.y - player.y;
-        const distance = Math.sqrt(dx * dx + dy * dy);
-        if (distance < player.radius + crystal.radius) {
-            crystals.splice(i, 1);
-            player.radius += 1;
-            player.radius = Math.min(player.radius, 50);
-            score++;
-            createParticles(crystal.x, crystal.y, 'lime');
-        }
-    }
-}
-
-function checkAICollectCrystal() {
-    aiBlobs.forEach(blob => {
-        for (let i = crystals.length - 1; i >= 0; i--) {
-            const crystal = crystals[i];
-            const dx = crystal.x - blob.x;
-            const dy = crystal.y - blob.y;
-            const distance = Math.sqrt(dx * dx + dy * dy);
-            if (distance < blob.radius + crystal.radius) {
-                crystals.splice(i, 1);
-                blob.radius += 1;
-                blob.radius = Math.min(blob.radius, 50);
-                createParticles(crystal.x, crystal.y, 'red');
-            }
-        }
-    });
-}
-
-// Draw
-function draw() {
-    ctx.fillStyle = 'black';
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-    // Pings
-    pings.forEach(ping => {
-        ctx.beginPath();
-        ctx.arc(ping.x, ping.y, ping.radius, 0, Math.PI * 2);
-        ctx.strokeStyle = `rgba(0, 255, 255, ${ping.alpha})`;
-        ctx.lineWidth = 2;
-        ctx.stroke();
-    });
-
-    // Crystals
-    crystals.forEach(crystal => {
-        if (crystal.visible) {
-            ctx.beginPath();
-            ctx.arc(crystal.x, crystal.y, crystal.radius, 0, Math.PI * 2);
-            ctx.fillStyle = 'lime';
-            ctx.fill();
-        }
-    });
-
-    // Particles
-    particles.forEach(p => {
-        ctx.beginPath();
-        ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
-        ctx.fillStyle = p.color;
-        ctx.fill();
-    });
-
-    // AI blobs
-    aiBlobs.forEach(blob => {
-        ctx.beginPath();
-        ctx.arc(blob.x, blob.y, blob.radius + 8, 0, Math.PI * 2);
-        ctx.fillStyle = 'rgba(255, 0, 0, 0.1)';
-        ctx.fill();
-        ctx.beginPath();
-        ctx.arc(blob.x, blob.y, blob.radius, 0, Math.PI * 2);
-        ctx.fillStyle = 'red';
-        ctx.fill();
-    });
-
-    // Player
-    ctx.beginPath();
-    ctx.arc(player.x, player.y, player.radius + 10, 0, Math.PI * 2);
-    ctx.fillStyle = 'rgba(255, 255, 255, 0.1)';
-    ctx.fill();
-    ctx.beginPath();
-    ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
-    ctx.fillStyle = 'white';
-    ctx.fill();
-
-    // UI - Score & Health
-    ctx.fillStyle = 'white';
-    ctx.font = '20px monospace';
-    ctx.fillText(`Score: ${score}`, 20, 30);
-
-    // Health bar
-    let healthRatio = (player.radius - 10) / (50 - 10);
-    ctx.fillStyle = 'gray';
-    ctx.fillRect(20, 40, 100, 10);
-    ctx.fillStyle = 'lime';
-    ctx.fillRect(20, 40, 100 * healthRatio, 10);
-
-    // Mini-map
-    let mapSize = 150;
-    let scaleX = mapSize / canvas.width;
-    let scaleY = mapSize / canvas.height;
-    ctx.fillStyle = 'rgba(255,255,255,0.1)';
-    ctx.fillRect(canvas.width - mapSize - 20, 20, mapSize, mapSize);
-
-    aiBlobs.forEach(blob => {
-        ctx.beginPath();
-        ctx.arc(canvas.width - mapSize - 20 + blob.x * scaleX, 20 + blob.y * scaleY, 3, 0, Math.PI * 2);
-        ctx.fillStyle = 'red';
-        ctx.fill();
-    });
-
-    ctx.beginPath();
-    ctx.arc(canvas.width - mapSize - 20 + player.x * scaleX, 20 + player.y * scaleY, 3, 0, Math.PI * 2);
-    ctx.fillStyle = 'white';
-    ctx.fill();
-}
-
-// Game loop
-function gameLoop() {
-    update();
-    draw();
-    requestAnimationFrame(gameLoop);
-}
-gameLoop();
-</script>
+    <canvas id="gameCanvas"></canvas>
+    <script src="game.js"></script>
 </body>
 </html>
