--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>IO Game Prototype</title>
+    <title>Advanced IO Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
+    <div id="gameOver" style="display:none;">
+        <h1>Game Over</h1>
+        <button onclick="restartGame()">Restart</button>
+    </div>
     <script src="game.js"></script>
 </body>
 </html>
